	Brace selection includes close brace now; and close
	  BEFORE the caret is matched.
18 October 2010
	Adding support for utf-16 input and output.
	Changed share mode to share for read & write.
	Filter control keys that are not mapped.
20 October 2010
	Open... and Save As... start in file path.
	Reload as utf-8 & utf-16.
	Added an Edit to the config menu.
	Spawn commands.
21 October 2010
	Spawned commands are now run through cmd.exe.
	Spawned commands are paused after execution.
	Output of spawned commands can be captured.
31 October 2010
	Fixed bug that added extra linebreak after last line.
07 November 2010
	Fixed bug that closed the window if a command fails.
	Fixed regular expression escapes to include special chars.
	Esc no longer generates a character.
21 November 2010
	Status bar isn't included in InvalidateRect().
	Added doublebuffer option.
	Removed the default configuration.
	No new line is loaded if file doesn't end in LF.
	Switched to 64-bit.
	Added syntax highlighting (kwd).
04 December 2011
	Window no longer resizes on config reload.
	Double-click and ^Space selects a word.
	4 wires now; dotted instead of solid lines.
	cp1252 encoding added.
	Detect and use crlf linebreaks.
	Changed kwd format to use '[b][i]' for bold/italic.
	Added drag & drop.
	Spawning programs does not bring up console.
	Breaking after "a" in "a b" leaves the space before "b".
	Find & Replace boxes is populated with selection.
06 December 2011
	Errors in configuration file are now silently ignored.
	Booleans now use yes|no.
	Lowered the number of colours to 8.
	Allow comments to start in any column in config.
	Changed the names of almost all fields.
	Nothing is done if comment is empty.
	Add odd line colouring.
	Status now shows number of chars selected.
	Encoding menu shows 4/8 EM tab and hard/soft tabs.
09 December 2011
	Added support for BOM in UTF-8 & UTF-16.
	Added BOM and CRLF config options.
	Fixed off-by-one error in line counter on status bar.